feat: balances endpoint
